Add 3D model view with image overlid

--- a/3D-Scanner/3D-Scanner/3D Scanner/3D Scanner/3D Scanner.csproj
+++ b/3D-Scanner/3D-Scanner/3D Scanner/3D Scanner/3D Scanner.csproj
@@ -181,6 +181,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="User Control\Viewwer3D.xaml.cs">
+      <DependentUpon>Viewwer3D.xaml</DependentUpon>
+    </Compile>
     <Page Include="CSS\StyleDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -200,6 +203,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="User Control\Viewwer3D.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Model.cs" />
